# future-seed-finetune

./: .gitignore  README.md  down.sh  pyproject.toml  repo_env.sh  run.sh  setup.sh
docs/experiments/: 2026-04-07-0p8b-local-validate.json  2026-04-07-0p8b-local-validate.md  2026-04-07-0p8b-remote-pretrained-smoke.json  2026-04-07-0p8b-remote-pretrained-smoke.md  2026-04-07-awkward-train-smoke.json  2026-04-07-awkward-train-smoke.md  2026-04-08-0p8b-fullval-rerun6.json  2026-04-08-0p8b-fullval-rerun6.md  2026-04-08-retrievaldigit-max1024-rerun7.json  2026-04-08-retrievaldigit-max1024-rerun7.md
future_seed_finetune/: __init__.py  qwen35_scalar_fs.py  qwen3next_scalar_fs.py
scripts/: build_awkward_kv_dataset.py  build_public_retrieval_dataset.py  download_qwen35_probe_assets.py  download_remote_wheelhouse.sh  smoke_qwen35_scalar_fs.py  train_awkward_scalar_fs.py  validate_qwen35_prefill.py
