[project]
name = "future-seed-finetune"
version = "0.1.0"
description = "Minimal Qwen3.5 Future-Seed scalar adapter experiments."
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
  "torch==2.7.1",
  "accelerate==1.10.1",
  "peft==0.17.1",
  "datasets==3.6.0",
  "protobuf==6.32.1",
  "sentencepiece==0.2.1",
  "transformers @ https://github.com/huggingface/transformers/archive/b9f0fbf532c124ff836466d896a716e26dbe4722.tar.gz",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["future_seed_finetune"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv]
package = true
